--- a/.travis.yml
+++ b/.travis.yml
@@ -1,88 +1,82 @@
-# Based on https://github.com/felixduvallet/ros-travis-integration
-#
-# vim:set ts=2 sw=2 et:
+################################################################################
+
+# Use ubuntu trusty (14.04) with sudo privileges.
 dist: trusty
 sudo: required
-language: generic
-compiler:
-  - gcc
-cache:
-  directories:
-    - $HOME/.cache/pip
-  before_cache:
-    - rm -f $HOME/.cache/pip/log/debug.log
+language:
+  - generic
 cache:
   - apt
 
+# Configuration variables. All variables are global now, but this can be used to
+# trigger a build matrix for different ROS distributions if desired.
 env:
   global:
-    #- ROS_DISTRO=jade
-    - ROS_CI_DESKTOP="$(lsb_release -cs)"
+    - ROS_DISTRO=indigo
+    - ROS_CI_DESKTOP="`lsb_release -cs`"  # e.g. [precise|trusty|...]
     - CI_SOURCE_PATH=$(pwd)
     - ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
+    - CATKIN_OPTIONS=$CI_SOURCE_PATH/catkin.options
     - ROS_PARALLEL_JOBS='-j8 -l6'
+    # Set the python path manually to include /usr/-/python2.7/dist-packages
+    # as this is where apt-get installs python packages.
+    - PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages:/usr/local/lib/python2.7/dist-packages
 
-  matrix:
-    - ROS_DISTRO=indigo
-    - ROS_DISTRO=jade
+################################################################################
 
+# Install system dependencies, namely a very barebones ROS setup.
 before_install:
   - sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
-  #- sudo sh -c "echo \"deb http://packages.ros.org/ros-shadow-fixed/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
-  - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
-  # Update python 2.7 version
-  - sudo apt-add-repository ppa:deadsnakes/ppa -y
+  - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
   - sudo apt-get update -qq
-  - sudo -H apt-get install -qq -y --allow-unauthenticated python2.7-dev libpython2.7-dev libpython2.7 python2.7 libpython2.7-stdlib
-    python-pip python-setuptools python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin python-catkin-tools
-  # Install Python future module
-  - sudo -H pip install -I future -t /usr/lib/python2.7/dist-packages
-  # Update PYTHONPATH
-  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
-  # Source environment
+  - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin
   - source /opt/ros/$ROS_DISTRO/setup.bash
-  # Prepare rosdep
+  # Prepare rosdep to install dependencies.
   - sudo rosdep init
   - rosdep update
 
+# Create a catkin workspace with the package under integration.
 install:
-  # Create catkin workspace
-  - mkdir -p ~/catkin_ws
+  - mkdir -p ~/catkin_ws/src
+  - cd ~/catkin_ws/src
+  - catkin_init_workspace
+  # Create the devel/setup.bash (run catkin_make with an empty workspace) and
+  # source it to set the path variables.
   - cd ~/catkin_ws
-  - catkin config --init --mkdirs
-  # Pull source depends
-  - cd src
-  - wstool init
-  - if [[ -f $ROSINSTALL_FILE ]]; then wstool merge $ROSINSTALL_FILE; fi
-  - wstool up
-  # Link the repo we are testing to the new workspace
+  - catkin_make
+  - source devel/setup.bash
+  # Add the package under integration to the workspace using a symlink.
+  - cd ~/catkin_ws/src
   - ln -s $CI_SOURCE_PATH .
-  # Install dependencies using rosdep
+
+# Install all dependencies, using wstool first and rosdep second.
+# wstool looks for a ROSINSTALL_FILE defined in the environment variables.
+before_script:
+  # source dependencies: install using wstool.
+  - cd ~/catkin_ws/src
+  - wstool init
+  - if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
+  - wstool up
+  # package depdencies: install using rosdep.
   - cd ~/catkin_ws
-  - rosdep install --from-paths src --ignore-src --rosdistro $ROS_DISTRO -q -y
-  # Install GeographicLib datasets (for Ubuntu Trusty - can only download geoid model)
+  - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+  
+  ##### for mavros
   - sudo -H mkdir -p /usr/share/geographiclib
   - sudo -H geographiclib-datasets-download egm96_5
 
-before_script:
-  # Source environment
-  - source /opt/ros/$ROS_DISTRO/setup.bash
-
+# Compile and test (mark the build as failed if any step fails). If the
+# CATKIN_OPTIONS file exists, use it as an argument to catkin_make, for example
+# to blacklist certain packages.
+#
+# NOTE on testing: `catkin_make run_tests` will show the output of the tests
+# (gtest, nosetest, etc..) but always returns 0 (success) even if a test
+# fails. Running `catkin_test_results` aggregates all the results and returns
+# non-zero when a test fails (which notifies Travis the build failed).
 script:
+  - source /opt/ros/$ROS_DISTRO/setup.bash
   - cd ~/catkin_ws
-  - catkin config --install -DSETUPTOOLS_DEB_LAYOUT=OFF -DSETUPTOOLS_ARG_EXTRA=""
-  - catkin build --no-status --summary
+  - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
+  # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
-  - catkin run_tests --no-status -p1 -i --summary
-  #- catkin_test_results --all ~/catkin_ws/build
-
-after_failure:
-  - find ~/catkin_ws/build -path '*/test_results/*' -type f -exec echo "==== {} ====" \; -exec cat {} \;
-
-notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/b856f174ff9736ad23ec
-    on_success: change
-    on_failure: always
-    on_start: false
+  - catkin_make run_tests && catkin_test_results
