--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,8 @@ before_script:
 script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
   - cd ~/catkin_ws
-  - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
-  # Run the tests, ensuring the path is set correctly.
+  - catkin config --install -DSETUPTOOLS_DEB_LAYOUT=OFF -DSETUPTOOLS_ARG_EXTRA=""
+  - catkin build --no-status --summary
   - source devel/setup.bash
-  - catkin_make run_tests && catkin_test_results
+  - catkin run_tests --no-status -p1 -i --summary
+  - catkin_test_results --all ~/catkin_ws/build
