--- a/.travis.yml
+++ b/.travis.yml
@@ -79,8 +79,7 @@ before_script:
 script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
   - cd ~/catkin_ws
-  - catkin config --install -DSETUPTOOLS_DEB_LAYOUT=OFF -DSETUPTOOLS_ARG_EXTRA=""
-  - catkin build --no-status --summary
+  - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
+  # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
-  - catkin run_tests --no-status -p1 -i --summary
-  - catkin_test_results --all ~/catkin_ws/build
+  - catkin_make run_tests && catkin_test_results
